comment social networks

--- a/src/app/core/shared/footer/containers/footer.component.html
+++ b/src/app/core/shared/footer/containers/footer.component.html
@@ -3,7 +3,7 @@
 
     <div class="footer-bottom">
       <div class="row align-items-center">
-        <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
+        <p class="col-lg-12 col-sm-12 footer-text m-0 text-center text-lg-left">
           Copyright MySuitcase © {{fullYear}}
           <span i18n>All rights reserved</span>  |
           <span i18n>Website made by </span><a href="http://www.linkedin.com/in/alejandro-mg-026a2a2b" target="_blank">Alejandro Manso</a> |
@@ -12,10 +12,11 @@
           <a href="">Privacy Policy</a> |
           <!-- <a href="">Cookies policy</a> -->
         </p>
-        <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
+        <!-- commented until having social networks -->
+        <!-- <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
