--- a/src/app/core/shared/web-notification-subscriber/web-notification-subscriber.component.html
+++ b/src/app/core/shared/web-notification-subscriber/web-notification-subscriber.component.html
@@ -1,4 +1,4 @@
-<button class="button button-hero mt-4 subscribe-button" (click)="subscribeNotifications()">
+<button class="button button-hero mt-4 subscribe-button" (click)="applyForNotifications()">
     <span i18n="@@subscribe_button">Subscribe</span>
     <mat-icon aria-hidden="false" aria-label="Discard item">subscriptions</mat-icon>
 </button>
