--- a/src/app/public/home/containers/home/home.component.scss
+++ b/src/app/public/home/containers/home/home.component.scss
@@ -28,6 +28,10 @@
   .notification__img-container {
     margin: auto;
     margin-top: -10px;
+
+    img {
+      max-height: 600px;
+    }
   }
 }
 
