--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -72,7 +72,7 @@ $margin: 15px;
   bottom: 5px;
   right: 0;
   display: flex;
-  width: 300px;
+  width: auto;
   overflow: hidden;
   flex-direction: column;
 
@@ -92,6 +92,10 @@ $margin: 15px;
     width: 26px;
     cursor: pointer;
     color: $secondary-color;
+
+    &:not(:last-child) {
+      margin-right: 5px;
+    }
   }
 }
 
