--- a/src/app/public/contact/containers/contact.component.html
+++ b/src/app/public/contact/containers/contact.component.html
@@ -55,7 +55,7 @@
       <div class="media contact-info">
         <span class="contact-info__icon"><i class="ti-home"></i></span>
         <div class="media-body">
-          <h3 i18n>📍 Spain.</h3>
+          <h3 i18n>📍 Spain</h3>
         </div>
       </div>
       <div class="media contact-info">
