add h1 in main screen

--- a/src/app/public/home/containers/home/home.component.html
+++ b/src/app/public/home/containers/home/home.component.html
@@ -6,7 +6,8 @@
     <div class="container">
       <div class="row align-items-center text-center text-md-left">
         <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
-          <h1 i18n>Forget about missing things for your next trip</h1>
+          <h1 i18n="@@mysuitcase">My Suitcase</h1>
+          <h2 i18n>Forget about missing things for your next trip</h2>
           <p i18n>Packing has always been the most boring part of the trip. With <i>Mysuitcase</i> we help you to optimize this process to not let you forget anything in your next trip. Why loosing time with things that dont require it?</p>
           <button class="button button-hero mt-4" (click)="goTo('login')" i18n>Login/Sign Up</button>
         </div>
