reduce suggestions height when mobile device

--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -381,6 +381,10 @@ $margin: 15px;
       padding-right: 30px;
       overflow: hidden;
 
+      .suggestion-card-body {
+        max-height: 350px;
+      }
+
       .suggestion-body {
         max-height: 175px;
         overflow-y: scroll;
